--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,7 +13,63 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML stands for Hypertext Markup Language</li>
+          <li>HTML is used to give a website's content structure.</li>
+          <li>HTML is made up of the elements that work together to provide structure</li>
+          <li>HTML elements ARE case-sensitive. Declarations are NOT case-sensitive.</li>
+          <li>Two important elements when using HTML are: the head element and the body element</li>
+          <li> Some of the elements are visibile to the user while others are not</li>
+          <li>Element types often used to add content to pages: Text, Image, Header, and List</li>
+          <li>Element types often used to divide and describe a page: Meta-related, Content division, and Semantic</li>
+          <li>The head element contains information about the webpage.</li>   
+          <li> The information that the head element contains is called metadata</li>
+          <li>The head element's metadata/information assists the browser to render the page correctly</li>
+          <li>Elements within the head are NOT visible to the user</li>
+          <li>The title tag goes inside the head element</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>An element refers to the entire element from opening tag to closing tag.</li>
+          <li>A tag refers only to what appears inside the angle brackets.</li>
+          <li>IMPORTANT: HTML attributes are ALWAYS defined in the beginning element, NEVER the closing element.</li>
+
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Three ways to style a webpage using CSS: inline, internal style sheet, and external style sheet.</li>
+          <li>Use inline CSS  to style an element directly in the HTML file</li>
+          <li>The most common way to style a webpage is by using an external CSS style sheet.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>The Box Model refers to the idea that HTML elements are esstemtially boxes that nest inside each other.</li>
+          <li>A HTML element box consists of margins outside the element, and the element's borders, padding, and content.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>GitS</h2>
+  <ul>
+    <li>git status: checks what branch we are currently on</li>
+    <li>git checkout -b example/branch-name: creates a new branch and switches to it</li>
+    <li>git fetch: Download objects and refs from another repository</li>
+    <li>git pull: Fetch from and integrate with another repository or a local branch</li>
+    <li>git push: Update remote refs along with associated objects</li>
+    <li>git help -a and git help -g: list available subcommands and some concept guides.</li>
+    <li>git help command or git help concept: to read about a specific subcommand or concept.</li>
+    <li>git help git: for an overview of the system.</li>
+  </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
