debugged JavaScript in script.js

--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
           <li>A padding indicates how much space we want around the content inside an element.</li>
           <li>The Box Model refers to the idea that HTML elements are esstemtially boxes that nest inside each other.</li>
           <li>A HTML element box consists of margins outside the element, and the element's borders, padding, and content.</li>
-=======
           <li>Enter your CSS notes here</li>
->>>>>>> 9d70146e1965a1b28713b4a94ede23c50641d596
+
         </ul>
       </section>
 
       <section class="card" id="git-section">
         
         <h2>Git</h2>
->>>>>>> 9d70146e1965a1b28713b4a94ede23c50641d596
   <ul>
     <li>git status: checks what branch we are currently on</li>
     <li>git checkout -b example/branch-name: creates a new branch and switches to it</li>
@@ -73,7 +71,9 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>lacing JavaScript near the bottom of an HTML page is one way to allow the browser to interpret code</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>placing JavaScript near the bottom of an HTML page is one way to allow the browser to interpret code</li>
           <li>Document Object Model (DOM) API, which has the capability to manipulate documents.</li>
           <li>Application Programming Interfaces (APIs) built into web browsers, providing functionality</li>
           <li>To signify that the value is a string, enclose it in single or double quote marks.</li>
