--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
+          <li>CSS means Cascading Style Sheets</li>
           <li>Three ways to style a webpage using CSS: inline, internal style sheet, and external style sheet.</li>
           <li>Use inline CSS  to style an element directly in the HTML file</li>
           <li>The most common way to style a webpage is by using an external CSS style sheet.</li>
